--- a/Aboutme.html
+++ b/Aboutme.html
@@ -64,7 +64,7 @@ td,#but:hover{
       <td id="a"><b>Education:</b></td><td id="b">Currently pursuing Bachelor degree in CS</td>
     </tr>
     <tr>
-     <td id="a"><b>Resume:</b></td><td id="b"><a href="Resume.jpg"><input type="button" id="but" value="View Resume"></a></td>
+     <td id="a"><b>Resume:</b></td><td id="b"><a href="Resume.pdf"><input type="button" id="but" value="View Resume"></a></td>
     </tr>
   </table>
   <div id="icons">
