--- a/skills.html
+++ b/skills.html
@@ -41,17 +41,17 @@
         <img src="feimg.jpeg">
         <h2>Front-end Developement</h2>
         <ul>
-          <li><p>I mastered CSS with a advanced concepts of html and a deep knowlegde about javascript.</p></li>
-          <li><p>I create many portfolio websites</p></li>
-          <li><p>I make website for shopkeepers to showcase their products</p></li>
+          <li><p>Proficient in HTML, CSS, and JavaScript, with a focus on foundational frontend development.</p></li>
+          <li><p>Skilled in creating static web pages and basic interactivity. Committed to expanding knowledge and gaining proficiency in responsive design principles and exploring frameworks and libraries to enhance frontend capabilities.</p></li>
+          <li><p>Eager to learn and grow in the field of frontend development.</p></li>
         </ul>
       </div>    
     <div class="sub">
        <img src="veimg.jpeg">
        <h2>Video Editing</h2>
        <ul>
-        <li><p>I practiced sfx,vfx and basic viscom concepts</p></li>
-        <li><p>I work with many film video editors and a deliver a trending video editing contents to them</p></li>
+        <li><p>Experience in video editing using Alight Motion on mobile devices.</p></li>
+        <li><p>Skilled in crafting engaging and dynamic video content, including transition features and effects  in alight motion.</p></li>
        </ul>
     </div>
 
