--- a/skills.html
+++ b/skills.html
@@ -59,8 +59,9 @@
        <img src="peimg.jpeg">
        <h2>Photo Editing</h2>
        <ul>
-        <li><p>I have a five year experience to work in adobe photoshop and lightroom.</p></li>
-        <li><p>I am work as natural photographer for three years to capture beauty of alapula,cocchin.</p></li>
+        <li><p>Basic proficiency with Photoshop tools, including familiarity with essential features such as selection tools, layers, basic image adjustments, and text manipulation.</p></li>
+        <li><p>Able to perform tasks such as cropping, resizing, and applying basic filters and effects.</p></li>
+        <li><p>Eager to further explore and expand skills in utilizing Photoshop for image editing and design projects.</p></li>
        </ul>
     </div>
    </div>
