--- a/skills.html
+++ b/skills.html
@@ -59,7 +59,7 @@
        <img src="peimg.jpeg">
        <h2>Photo Editing</h2>
        <ul>
-        <li><p>Basic proficiency with Photoshop tools, including familiarity with essential features such as selection tools, layers, basic image adjustments, and text manipulation.</p></li>
+        <li><p>Basic knowledge in adobe Photoshop tools, including familiarity with essential features such as selection tools, layers, basic image adjustments, and text manipulation.</p></li>
         <li><p>Able to perform tasks such as cropping, resizing, and applying basic filters and effects.</p></li>
         <li><p>Eager to further explore and expand skills in utilizing Photoshop for image editing and design projects.</p></li>
        </ul>
