--- a/Aboutme.html
+++ b/Aboutme.html
@@ -46,13 +46,13 @@ td,#but:hover{
       <td> <h1>About Me</h1></td>
     </tr>
     <tr>
-      <td id="a"><b>Name:</b></td><td id="b">Maddy</td>
+      <td id="a"><b>Name:</b></td><td id="b">Mariappan</td>
     </tr>
     <tr>
       <td id="a"><b>Date of birth:</b></td><td id="b">December 21 2003</td>
     </tr>
     <tr>
-      <td id="a"><b>Address:</b></td><td id="b">8,Vellalar under street,vadasery Nagercoil</td>
+      <td id="a"><b>Address:</b></td><td id="b">47/7,Bharathiyar 8th Street,Sankarankovil.</td>
     </tr>
     <tr>
       <td id="a"><b>Email:</b></td><td id="b">marinandhu03@gmail.com</td>
@@ -61,7 +61,7 @@ td,#but:hover{
       <td id="a"><b>Phone:</b></td><td id="b">9597754992</td>
     </tr>
     <tr>
-      <td id="a"><b>Education:</b></td><td id="b">Currently pursuing Bachelor degree in CS</td>
+      <td id="a"><b>Education:</b></td><td id="b">Bachelor degree in Computer Science.</td>
     </tr>
     <tr>
      <td id="a"><b>Resume:</b></td><td id="b"><a href="Resume.pdf"><input type="button" id="but" value="View Resume"></a></td>
