--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <div class="two">
      <table>
         <tr>
-        <td> <img src="pic2.jpg"></td>
+        <td> <img src="Afsa_pic.jpg"></td>
 
         <td>
         <center>
          <p>I am</p>
-         <h2><b>Maddy</b></h2>
+         <h2><b>Mariappan</b></h2>
          <p><i>A life without Coding is a man without heart</i></p>
          <a href="mailto:marinandhu03@gmail.com"><input type="button" value="Contact me" id="s"></a>
      
