--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <div class="two">
      <table>
         <tr>
-        <td> <img src="Afsa_pic.jpg"></td>
+        <td> <img src="Mirror_pic.jpg"></td>
 
         <td>
         <center>
          <p>I am</p>
          <h2><b>Mariappan</b></h2>
-         <p><i>A life without Coding is a man without heart</i></p>
+         <p><i>A life without Coding is a man without heart ! </i></p>
          <a href="mailto:marinandhu03@gmail.com"><input type="button" value="Contact me" id="s"></a>
      
         </center> 
